# thesisblockchainrobots

./: README.md
adminUI/: README.md  next.config.js  package-lock.json  package.json
adminUI/app/: globals.css  layout.tsx  page.module.css  page.tsx
adminUI/app/locations/: page.tsx
adminUI/app/robots/: layout.tsx  page.module.css  page.tsx
adminUI/app/tasks/: layout.tsx  page.tsx
adminUI/contracts/: contracts.ts
adminUI/data/: BCE2020.xlsx  BCE2021.xlsx  BCE2022.xlsx  Birthdays_addressbook#contacts@group.v.calendar.google.com.ics  ngbahoch@gmail.com.ics  pretified.xlsx  worksheet.xlsx
adminUI/public/: acalendar-logo.ai
adminUI/services/: firebase.ts  firebaseOnChange.ts  firebaseWrite.ts  importExcel.ts  processDataKeys.ts  utils.ts
adminUI/styles/: global.module.css
adminUI/type/: dataType.ts
blockchain/: README.md  accounts  commands  log.txt  network_params.yaml  operating_sequence
blockchain/eth_client/: README.md  hardhat.config.ts  package-lock.json  package.json
blockchain/eth_client1/: package-lock.json  package.json
blockchain/smart-contract-example/: hardhat.config.ts  package-lock.json
robot/: README.md
robot/blockchain_warehaus/: CMakeLists.txt  README.md  package.xml
robot/blockchain_warehaus/scripts/: commandPublisher.py  navigate_2D.py  neo_navigator.py  neo_navigator_0.py
robot/blockchain_warehaus/scripts/Old Test Code/: interceptor.py  navigate_2D.py  navigate_2D_0.py  navigate_2D_1.py  navigate_2D_2.py  neo_navigator.py
robot/eth_client1/: package-lock.json  package.json
robot/ros_multi_tb3/: README.md
(+86 files in other folders)
