<?xml version="1.0"?>
<package format="2">
  <name>blockchain_warehaus</name>
  <version>0.0.0</version>
  <description>The blockchain_warehaus package</description>

  <maintainer email="chuong@todo.todo">chuong</maintainer>

  <license>TODO</license>
 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>actionlib</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <exec_depend>actionlib</exec_depend>

  <build_depend>move_base_msgs</build_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <exec_depend>move_base_msgs</exec_depend>

  <build_depend>nav_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
